<resources>
    <string name="app_name">Just Run</string>
    <string name="title_activity_maps">Map</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="duration">Duration:</string>
    <string name="steps">Steps:</string>
    <string name="steps_with_value">Steps: %1$d</string>
    <string name="distance_m">Distance: %1$d m</string>
    <string name="distance_km">Distance: %1$.2f km</string>
    <string name="view_route_on_map">View route on map</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="splash_screen_title">JOOKSKEM</string>

    <string name="time_elapsed">Time elapsed</string>
    <string name="time_elapsed_s">Time elapsed: %1$d s</string>
    <string name="time_elapsed_m_s">Time elapsed: %1$d m %2$d s</string>
    <string name="time_elapsed_h_m_s">Time elapsed: %1$d h %2$d m %3$d s</string>
    <string name="distance_ran">Distance ran:</string>
    <string name="finish_workout">Finish workout</string>
    <string name="start_new_workout">Start new workout</string>
    <string name="previous_workouts">Previous workouts</string>
    <string name="logo">logo</string>
    <string name="feet">feet</string>
    <string name="storage_switch_title">Storage</string>
    <string name="location_switch_title">Location</string>
    <string name="location_switch_summary_on">Your location is not shared</string>
    <string name="location_switch_summary_off">Your location is shared</string>
    <string name="storage_switch_summary_on">Your workout data is not stored</string>
    <string name="storage_switch_summary_off">Your workout data is stored</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_see_past_workouts">See past workouts</string>
    <string name="button_start_new_workout">Start new workout</string>
    <string name="checkbox_clear_cache">clear_cache</string>
    <string name="checkbox_summary">Clear all data of past workouts</string>
    <string name="checkbox_title">Clear data</string>
    <string name="distance_value_m">%1$d m</string>
    <string name="distance_value_km">%1$.2f km</string>
    <string name="header_date">Date</string>
    <string name="header_distance">Distance</string>
    <string name="header_steps">Steps</string>
    <string name="back_arrow">back arrow</string>
    <string name="settings">settings</string>
    <string name="placeholder">placeholder</string>
    <string name="workout_duration">Workout Duration</string>
    <string name="until">to</string>
    <string name="pref_interval_label_2">2 seconds</string>
    <string name="pref_interval_label_5">5 seconds</string>
    <string name="pref_interval_label_10">10 seconds</string>
    <string name="pref_interval_value_2">2000</string>
    <string name="pref_interval_value_5">5000</string>
    <string name="pref_interval_value_10">10000</string>
    <string name="interval_preference">interval_preference</string>
    <string name="interval_preference_title">Location update interval</string>
</resources>