<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WorkoutDetailsActivity">

    <ImageButton
        android:id="@+id/button_back_workout"
        android:layout_width="@dimen/toolbar_generic_size"
        android:layout_height="@dimen/toolbar_generic_size"
        android:layout_marginStart="@dimen/toolbar_horizontal_margin"
        android:layout_marginTop="@dimen/toolbar_vertical_margin"
        android:background="@drawable/layout_bg"
        android:backgroundTint="@color/navigation_bg"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_fat"
        android:background="@drawable/layout_bg"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:padding="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back_workout">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_duration">

            <TextView
                android:id="@+id/tv_workout_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/padding_medium"
                android:text="@string/placeholder"
                android:textColor="@color/white"
                android:textSize="@dimen/overlay_text_whoa" />

            <TextView
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/until"
                android:textColor="@color/white"
                android:textSize="@dimen/overlay_text_large"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_workout_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_medium"
                android:text="@string/placeholder"
                android:textColor="@color/white"
                android:textSize="@dimen/overlay_text_whoa" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_medium"
            android:text="@string/placeholder"
            android:textColor="@color/white"
            android:textSize="@dimen/overlay_text_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/tv_title_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/workout_duration"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/overlay_text_wtf"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_oprah"
        android:text="@string/distance_value_m"
        android:textSize="@dimen/overlay_text_whoa"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/tv_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/toolbar_vertical_margin"
        android:text="@string/placeholder"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_distance" />

    <Button
        android:id="@+id/btn_map_activity"
        android:layout_width="@dimen/button_large_width"
        android:layout_height="@dimen/button_large_height"
        android:text="@string/view_route_on_map"
        android:textSize="@dimen/overlay_text_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_steps" />

</androidx.constraintlayout.widget.ConstraintLayout>