<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/border_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/padding_light"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_marginEnd="@dimen/margin_fat"
        android:layout_marginBottom="@dimen/margin_fat"
        android:padding="@dimen/padding_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_back_workouts"
        app:layout_constraintTop_toBottomOf="@+id/button_back_workouts"
        tools:context=".activities.MainActivity">

        <LinearLayout
            android:id="@+id/table_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:orientation="horizontal"
            android:padding="@dimen/padding_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_header_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/header_date"
                android:textAlignment="center"
                android:textColor="@color/textAlt"
                android:textSize="@dimen/overlay_text_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_header_distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/header_distance"
                android:textAlignment="center"
                android:textColor="@color/textAlt"
                android:textSize="@dimen/overlay_text_large"
                tools:textStyle="bold" />

            <TextView
                android:id="@+id/tv_header_steps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/header_steps"
                android:textAlignment="center"
                android:textColor="@color/textAlt"
                android:textSize="@dimen/overlay_text_large"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_workouts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding_medium"
            android:padding="@dimen/padding_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/table_header"
            app:layout_constraintTop_toBottomOf="@+id/table_header" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/button_back_workouts"
        android:layout_width="@dimen/toolbar_generic_size"
        android:layout_height="@dimen/toolbar_generic_size"
        android:layout_marginStart="@dimen/toolbar_horizontal_margin"
        android:layout_marginTop="@dimen/toolbar_vertical_margin"
        android:background="@drawable/layout_bg"
        android:backgroundTint="@color/navigation_bg"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />


</androidx.constraintlayout.widget.ConstraintLayout>